# robot_arm_opencv_pick_and_place

./: .gitignore  README.md
src/my_arm_planning_py/: package.xml  setup.cfg  setup.py
src/my_arm_planning_py/my_arm_planning_py/: rrtconnect_planning.py
src/my_arm_planning_py/src/: rrtconnect_planning.py  world_model.py
src/my_robot_interfaces/: CMakeLists.txt  package.xml
src/my_robot_interfaces/srv/: GetPosition.srv  PlanJoint.srv
src/opencv_perception/: package.xml  setup.cfg  setup.py
src/opencv_perception/launch/: all_perception.launch.py  color_filtering.launch.py  edge_detection.launch.py  hsv_from_mouse.launch.py  load_images.launch.py  load_images_from_camera.launch.py  read_image.launch.py  stream_camera.launch.py
src/opencv_perception/opencv_perception/: color_filtering.py  edge_detection.py  hsv_from_mouse.py  load_images.py  load_images_from_camera.py  stream_camera.py
src/opencv_perception/src/: load_images.py
src/robot_arm/: CMakeLists.txt  package.xml
src/robot_arm/config/: ur3e_controllers.yaml  ur3e_controllers_gripper.yaml
src/robot_arm/launch/: spawn_ur3e_camera.launch.py  spawn_ur3e_camera_gripper.launch.py  spawn_ur3e_camera_moveit.launch.py  view_ur3e_camera.launch.py  view_ur3e_camera_gripper.launch.py
src/robot_arm/models/: blue_bin.sdf  blue_block.sdf  red_bin.sdf  red_block.sdf  table.sdf  yellow_bin.sdf  yellow_block.sdf
src/robot_arm/src/: pick_and_place.cpp  pick_and_place_moveit.cpp  robot_model.cpp
src/robot_arm/urdf/: camera.xacro  hand_e.ros2_control.xacro  robotiq_gripper_macro.xacro  robotiq_hand_e_macro.urdf.xacro  ur3e.ros2_control.xacro  ur3e_camera.urdf.xacro  ur3e_camera_gripper.urdf.xacro  ur3e_macro.xacro
src/robot_arm/worlds/: pick_and_place.world
src/ur3e_camera_moveit_config/: .setup_assistant  CMakeLists.txt  package.xml
src/ur3e_camera_moveit_config/config/: moveit_controllers.yaml  ompl_planning.yaml  ros2_controllers.yaml  ur.srdf  ur.urdf.xacro
src/ur3e_camera_moveit_config/launch/: demo.launch.py  move_group.launch.py  moveit_rviz.launch.py  rsp.launch.py  setup_assistant.launch.py  spawn_controllers.launch.py  static_virtual_joint_tfs.launch.py  warehouse_db.launch.py
trajectory_data/: iteration_summary.csv  traj_00000_pick_descend.json  traj_00000_place_above_bin.json  traj_00000_place_retreat.json  traj_00000_pre_pick.json  traj_00001_pick_descend.json  traj_00001_place_above_bin.json  traj_00001_place_retreat.json  traj_00001_pre_pick.json  traj_00002_pick_descend.json  traj_00002_place_above_bin.json  traj_00002_place_retreat.json  traj_00002_pre_pick.json  traj_00003_pick_descend.json  traj_00003_place_above_bin.json  traj_00003_place_retreat.json  traj_00003_pre_pick.json  traj_00004_pick_descend.json  traj_00004_place_above_bin.json  traj_00004_place_retreat.json  traj_00004_pre_pick.json  traj_00005_pick_descend.json  traj_00005_place_above_bin.json  traj_00005_place_retreat.json  traj_00005_pre_pick.json  traj_00007_pick_descend.json  traj_00007_place_above_bin.json  traj_00007_pre_pick.json  traj_00009_pick_descend.json  traj_00009_place_above_bin.json  traj_00009_place_retreat.json  traj_00009_pre_pick.json  traj_00010_pick_descend.json  traj_00010_pre_pick.json  traj_00011_pick_descend.json  traj_00011_place_above_bin.json  traj_00011_place_retreat.json  traj_00011_pre_pick.json  traj_00012_pick_descend.json  traj_00012_pre_pick.json  (+446 more)
